@@ -1,5 +1,3 @@
-require 'cucumber/rb_support/rb_hook'
-
 module Cucumber
   module RbSupport
     # This module defines the methods you can use to define pure Ruby
@@ -19,6 +17,10 @@ module Cucumber
 
         def register_rb_hook(phase, tag_names, proc)
           @rb_language.register_rb_hook(phase, tag_names, proc)
+        end
+
+        def register_rb_transform(regexp, proc)
+          @rb_language.register_rb_transform(regexp, proc)          
         end
 
         def register_rb_step_definition(regexp, proc)
@@ -71,8 +73,8 @@ module Cucumber
       # the pattern contains captures then they will be yielded as arguments to the
       # provided proc. The return value of the proc is consequently yielded to the
       # step definition.
-      def Transform(*args, &proc)
-        StepMother.register_transform(*args, &proc)
+      def Transform(regexp, &proc)
+        RbDsl.register_rb_transform(regexp, proc)
       end
       
       # Registers a proc that will run after Cucumber is configured. You can register as 
