@@ -23,7 +23,7 @@ module Cucumber
         end
       end
 
-      attr_reader :proc
+      attr_reader :proc, :regexp
 
       def initialize(rb_language, pattern, proc)
         raise MissingProc if proc.nil?
@@ -34,15 +34,11 @@ module Cucumber
         @rb_language, @regexp, @proc = rb_language, pattern, proc
       end
 
-      def regexp
-        @regexp
-      end
-
       def invoke(args)
         args = args.map{|arg| Ast::PyString === arg ? arg.to_s : arg}
         begin
-          transformed_args = StepMother.transform_arguments(args, @rb_language.current_world)
-          @rb_language.current_world.cucumber_instance_exec(true, regexp.inspect, *transformed_args, &@proc)
+          args = @rb_language.execute_transforms(args)
+          @rb_language.current_world.cucumber_instance_exec(true, regexp.inspect, *args, &@proc)
         rescue Cucumber::ArityMismatchError => e
           e.backtrace.unshift(self.backtrace_line)
           raise e
