@@ -50,9 +50,7 @@ module Cucumber
 
   # This is the meaty part of Cucumber that ties everything together.
   class StepMother
-    include Constantize    
-    @@transforms = []
-    StepArgumentTransform = Struct.new(:pattern, :transformer)
+    include Constantize
     attr_writer :options, :visitor, :log
 
     def initialize
@@ -60,26 +58,6 @@ module Cucumber
       @programming_languages = []
       @language_map = {}
       load_natural_language('en')
-    end
-    
-    def self.register_transform(pattern, &transformer)
-      raise Cucumber::ArityMismatchError.new('Transform must be registered with at least a one-argument block') if !block_given? || transformer.arity < 1
-      @@transforms.unshift StepArgumentTransform.new(Regexp.new(pattern), transformer.to_proc)
-    end
-
-    def self.transform_arguments(step_args, current_world=nil)
-      matched = nil
-      step_args.map do |step_arg|
-        if transform = @@transforms.detect {|t| matched = t.pattern.match(step_arg) }
-          if matched.captures.empty?
-            current_world.cucumber_instance_exec true, transform.pattern.inspect, step_arg, &transform.transformer
-          else
-            current_world.cucumber_instance_exec true, transform.pattern.inspect, *matched.captures, &transform.transformer
-          end
-        else
-          step_arg
-        end
-      end
     end
 
     def load_plain_text_features(feature_files)
@@ -257,8 +235,8 @@ module Cucumber
       @programming_languages.each do |programming_language|
         programming_language.after_configuration(configuration)
       end
-    end  
-    
+    end
+
     private
 
     # Registers a StepDefinition. This can be a Ruby StepDefintion,
